main title paddings fix on smaller desktop + build commands

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -12,6 +12,7 @@
 }
 
 $breakpoints: (
+  desktop-larger: 1400px,
   desktop-large: 1200px,
   desktop: 1024px,
   tablet-large: 960px,
