--- a/src/styles/components/_homeSection.scss
+++ b/src/styles/components/_homeSection.scss
@@ -9,16 +9,17 @@
 
   &__title {
     font-weight: bold;
-    line-height: 1.333;
+    line-height: 1;
     margin-top: 0;
-    margin-bottom: 10px;
-    @include media("<desktop-large") {
-      margin-bottom: 20px;
+    margin-bottom: 3px;
+
+    @include media(">=desktop-larger") {
+      margin-bottom: 10px;
     }
   }
 
   &__title-inner {
-    @include media("<desktop-large") {
+    @include media("<desktop-larger") {
       display: block;
     }
 
@@ -29,6 +30,13 @@
     &--second {
       @include fluid-type(500px, 1600px, 31px, 62px);
     }
+
+    &--first,
+    &--second {
+      @include media("<desktop-larger") {
+        margin-bottom: 10px;
+      }
+    }
   }
 
   &__title-spacer {
@@ -37,7 +45,7 @@
     margin-right: 17px;
     margin-left: 17px;
 
-    @include media("<desktop-large") {
+    @include media("<desktop-larger") {
       display: none;
     }
   }
